# Portaldot-Dev-Suite

./: .gitignore  CONTRIBUTING.md  Implementation.md  Readme.md  Requirements.md  Userflow.md  cli.js  devsuite.ps1  devsuite.sh  package-lock.json  package.json  structure.md
.github/workflows/: build-contracts.yml
config/: portaldot-dev-spec.json  pot_mainnet_spec_raw.json
dashboard/: README.md  comm.2608b63323ff0240.js  conf.a78f32e00a6b6f11.js  dyna.23d9a06269838203.js  dyna.2574d2ab82e04ec1.js  dyna.30855a6eee30d31b.js  dyna.3777b63b622de47f.js  dyna.3bcd825bd94497a4.js  dyna.3c4339cf64d9ba30.js  dyna.3f20f78bc5948480.js  dyna.4b922752548735f2.js  dyna.60182fce63b5857e.js  dyna.890b7f1e8eb1cac1.js  dyna.911c4e6a682f373a.js  dyna.98f978e026e9f00d.js  dyna.b8b46cf27bc4ccf3.js  dyna.cc9667b1655f48e0.js  dyna.d91fed93b4d586ad.js  extr.1beedbf44c61f3d6.css  index.html  load.3a1d6c9588b00497.js  logo.05ba8b90d4ebda7d.js  logo.8b0f77b0e4067f52.js  logo.e82a3af3ca0e7a71.js  main.e7478b78e808432e.js  modu.0afb70c7df57128b.js  modu.0e3f1a9c83940536.js  modu.18f7e9d60d53bf39.js  modu.285b07ad2aa5f7ac.js  modu.32bd454c03a7465b.js  modu.37d90a232dd681e8.js  modu.4ebca2dd3cb91a17.js  modu.503a242315483d54.js  modu.5a269da0aed061a9.js  modu.60cfd7e6f615865b.js  modu.6109d5c819a37f9f.js  modu.7eefd5f7893eeb5a.js  modu.87a1bb8ee98ac824.js  modu.8fbd5b115b1480e4.js  modu.93fd32d65f403dec.js  (+31 more)
examples/: README.md
examples/auction/: Cargo.toml  lib.rs
examples/auction/src/: lib.rs
examples/escrow/: Cargo.toml
examples/escrow/src/: lib.rs
examples/test_contract/: Cargo.toml  lib.rs
examples/token/: Cargo.toml
examples/token/src/: lib.rs
experiments/: README.md
experiments/contracts-v5/: Dockerfile.ink4  README.md  build-docker.ps1  build-nightly.ps1
experiments/contracts-v5/auction/: Cargo.toml
experiments/portaldot-node/: Dockerfile  README.md  setup-wsl.ps1  start-docker.bat  upgrade-cli.mjs
scripts/: README.md  build-node.sh  release.sh
server/: README.md  server.cjs  server.js
templates/: README.md
templates/fungible-token/: Cargo.toml
templates/fungible-token/src/: lib.rs
