[package]
name = "auction"
version = "0.1.0"
authors = ["Portaldot Dev"]
edition = "2021"

[dependencies]
ink = { version = "4.3.0", default-features = false }

[dev-dependencies]
ink_e2e = { version = "4.3.0" }

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
e2e-tests = []
