[package]
name = "auction"
version = "0.1.0"
authors = ["Portaldot Dev"]
edition = "2021"

[dependencies]
ink = { version = "=4.3.0", default-features = false }
scale = { package = "parity-scale-codec", version = "=3.6.1", default-features = false, features = ["derive"] }
scale-info = { version = "^2.7.0", default-features = false, features = ["derive"], optional = true }

[lib]
name = "auction"
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []

[profile.release]
overflow-checks = false
lto = "fat"
opt-level = "z"
