[package]
name = "auction"
version = "0.1.0"
authors = ["Portaldot Dev"]
edition = "2021"

[dependencies]
ink = { version = "5.0.0-rc.2", default-features = false }

[dev-dependencies]
ink_e2e = { version = "5.0.0-rc.2" }

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
e2e-tests = []
